syntax = "proto3";
package com.antigravity;

option java_package = "com.antigravity.proto";
option java_multiple_files = true;

message InitializeRaceRequest {
  string race_id = 1;
  repeated string driver_ids = 2;
}

message InitializeRaceResponse {
  bool success = 1;
  string message = 2;
}
